--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -25,10 +25,16 @@
       gap: 10px;
 
       input {
+        box-sizing: border-box;
+        padding: 0 20px;
         height: 50px;
         width: 40%;
         border: none;
         border-bottom: 1px solid black;
+
+        &:focus {
+          border-radius: 20px;
+        }
       }
 
       input:nth-last-child(2) {
@@ -39,6 +45,7 @@
       input:nth-last-child(1) {
         width: 50px;
         height: 50px;
+        padding: 0;
         font-size: 1.9em;
         color: rgb(144, 144, 144);
         border-radius: 50%;
@@ -50,13 +57,26 @@
       width: 80%;
       list-style-type: none;
 
+      .info-message {
+        width: 100%;
+        text-align: end;
+        border-bottom: solid rgb(159, 159, 159) 1px;
+      }
+
       li {
         margin-top: 20px;
         height: 40px;
         display: flex;
         justify-content: space-between;
 
+        .edit-input {
+          font-size: 1.2em;
+          text-decoration: dotted 1px;
+          border: none;
+        }
+
         p {
+          font-size: 1.2em;
           height: 100%;
           cursor: pointer;
         }
